# finite-field

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
ff_derive/: Cargo.toml
ff_derive/src/: lib.rs
src/: lib.rs
tests/: derive.rs
