[package]
name = "finite-field"
version = "0.0.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition = "2021"
rust-version = "1.85"
description = "Traits for finite fields"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/RustCrypto/finite-field"

[dependencies]
rand_core = { version = "0.10", default-features = false }
subtle = { version = "2.2.1", default-features = false, features = ["i128"] }

[features]
default = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
